Wed Apr 13 17:14:12 UTC 2005  Justin Michel  <michel_j@ociweb.com>

        * TAO/orbsvcs/ImplRepo_Service/ImR_Activator_i.h:
        
          Missing include for ACE_CString

Wed Apr 13 17:07:12 UTC 2005  Justin Michel  <michel_j@ociweb.com>

        * TAO/orbsvcs/ImplRepo_Service/AsyncStartupWaiter_i.cpp:
        * TAO/orbsvcs/ImplRepo_Service/ImR_Locator_i.cpp:
        
          Fix some problems on exceptions=0 builds.

Wed Apr 13 16:22:12 UTC 2005  Justin Michel  <michel_j@ociweb.com>

        * TAO/orbsvcs/ImplRepo_Service/ImR_Activator_i.cpp:
        * TAO/orbsvcs/ImplRepo_Service/ImR_Locator_i.cpp:
        
          Cleanup output messages.
          
        * TAO/orbsvcs/tests/ImplRepo/airplane_server_i.cpp:
        * TAO/orbsvcs/tests/ImplRepo/nestea_server_i.cpp:
        
          Fix tests not to activate the poa manager until the server
        is ready to accept incoming requests.
        
        * TAO/tao/ImR_Client/ServerObject.pidl:
        * TAO/tao/ImR_Client/ServerObjectA.cpp:
        * TAO/tao/ImR_Client/ServerObjectC.cpp:
        * TAO/tao/ImR_Client/ServerObjectC.h:
        * TAO/tao/ImR_Client/ServerObjectC.inl:
        * TAO/tao/ImR_Client/ServerObjectS.cpp:
        * TAO/tao/ImR_Client/ServerObjectS.h:
        * TAO/tao/ImR_Client/ServerObject_i.cpp:
        
          Change the ServerObject::shutdown operation to a oneway to prevent
        the need for a reply during shutdown. 
          Changed the ServerObject::shutdown to first destroy the root poa, so 
        that all registered child poas can notify the ImR that they are shutting
        down. (From the ImR's perspective each child POA is a separate registered
        server.)

Wed Apr 13 14:47:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORBInitInfo.cpp:
          Simplified some checks

Wed Apr 13 07:06:11 2005  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/CORBALOC_Parser.cpp: